# AreaOptimalPolygonisation

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
include/: Common.hpp  Evaluator.hpp
include/Config/: ArgParser.hpp  Error.hpp
include/Drivers/Global/: Algorithm.hpp  AntColony.hpp  LocalSearch.hpp  SimulatedAnnealing.hpp
include/Drivers/Local/: Algorithm.hpp  ConvexHull.hpp  Incremental.hpp  Onion.hpp
scripts/: mitsos.py
source/: Common.cpp  Evaluator.cpp  main.cpp
source/Config/: ArgParser.cpp
source/Drivers/Global/: Algorithm.cpp  AntColonyDriver.cpp  LocalSearch.cpp  SimulatedAnnealing.cpp
source/Drivers/Local/: Algorithm.cpp  ConvexHull.cpp  Incremental.cpp  Onion.cpp
